Fix spacing on repositories and keyword title in selected feature

--- a/src/feature-selector-form/feature-selector-form.module.css
+++ b/src/feature-selector-form/feature-selector-form.module.css
@@ -150,7 +150,7 @@ button.clearButton:active {
 .selectedFeatureKeywordTitle {
 	font-size: var( --font-body );
 	font-weight: 500;
-	margin-bottom: 0.375rem;
+	margin: 0 0 0.375rem 0;
 }
 
 .keywordsWrapper {
